--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+所有測試內容都在spec/integration_spec.rb裡頭 https://github.com/nkj20932/rspec_example/blob/master/spec/integration_spec.rb
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+clone後請執行 $rspec spec/integration_spec.rb 以進行測試
+
+此為示範網站，教學內容請看 http://www.motion-express.com/?p=2970 
